[package]
name = "drum2midi"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio I/O and processing
hound = "3.5"  # WAV/AIFF file I/O
rubato = "0.14"  # Audio resampling

# FFT and spectral processing
rustfft = "6.1"
ndarray = { version = "0.15", features = ["serde"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI interface
clap = { version = "4.4", features = ["derive"] }

# Math and statistics
statistical = "1.0"
rand = "0.8"  # For GMM clustering
rand_distr = "0.4"

# MIDI processing
midly = "0.5"

# Image processing for QA artifacts
image = "0.24"
plotters = "0.3"

# Parallel processing
rayon = "1.8"

# Error handling
thiserror = "1.0"

# Additional utilities
itertools = "0.12"
anyhow = "1.0"
